Feat: update classes in tests-bases